cabal-version:       2.0
name:                cabal-appimage
version:             0.1.0
synopsis:            Cabal support for creating AppImage applications
description:         This package provides a build hook automating the
                     creation of AppImage bundles.
homepage:            https://github.com/gbrsales/cabal-appimage
bug-reports:         https://github.com/gbrsales/cabal-appimage/issues
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Gabriele Sales
maintainer:          gbrsales@gmail.com
copyright:           2020 Gabriele Sales
category:            Development
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Distribution.AppImage
  build-depends:       base >=4.11.0.0 && <4.15,
                       Cabal >=2.4.1.0 && <3.2,
                       filepath >=1.4.2.1 && <1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fno-warn-name-shadowing
